--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="imagebackgroud">
-        <img src="/poza.jpg">
+        <img src="img/poza.jpg">
         <div class="countdown" id="countdown">
             <ul>
                 <li><span> 0 </span>Minute</li>
